--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -15,7 +15,7 @@
   "register_now": "Register Now",
   "do_not_have_an_account": "Don't have an account?",
   "date_of_birth": "Date of Birth",
-  "choose_city": "Choose City",
+  "choose_city": "Choose Location",
   "gender": "Gender",
   "information_text": "In order for us to offer suggestions specific to your age and location, you need to make the following adjustments",
   "setting": "SETTINGS",
@@ -31,13 +31,15 @@
   "my_account": "My Account",
   "phone_number": "Phone Number",
   "e_mail": "E-Mail",
-  "city": "City",
+  "location": "Location",
   "account_transactions": "Account Transactions",
   "delete_account": "Delete the Account",
   "sign_out": "Sign Out",
   "saved": "Saved",
   "favorites": "Favorites",
-  "category_choose_information": "Choose at least 4 and at most 8 categories below so that we can get to know you better and make special suggestions for you"
+  "category_choose_information": "Choose at least 4 and at most 8 categories below so that we can get to know you better and make special suggestions for you",
+  "save": "Save",
+  "clear_cache": "Clear Cache"
 
 
 
