Register page moved to auth folder and navigationService added to system.

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -39,9 +39,9 @@
   "favorites": "Favorites",
   "category_choose_information": "Choose at least 4 and at most 8 categories below so that we can get to know you better and make special suggestions for you",
   "save": "Save",
-  "clear_cache": "Clear Cache"
+  "clear_cache": "Clear Cache",
 
-
+  "navigation_not_found": "Page Not Found!"
 
 
 
