--- a/assets/lang/tr-TR.json
+++ b/assets/lang/tr-TR.json
@@ -40,5 +40,7 @@
   "favorites": "Beğenilenler",
   "category_choose_information": "Seni daha iyi tanıyabilmemiz ve sana özel önerilerde bulunabilmemiz için aşağıdan en az 4 en fazla 8 kategori seç",
   "save": "Kaydet",
-  "clear_cache": "Önbelleği Temizle"
+  "clear_cache": "Önbelleği Temizle",
+
+  "navigation_not_found": "Aradığınız Sayfa Bulunamadı."
 }
