for register agreements checkbox added

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -40,7 +40,8 @@
   "category_choose_information": "Choose at least 4 and at most 8 categories below so that we can get to know you better and make special suggestions for you",
   "save": "Save",
   "clear_cache": "Clear Cache",
-
+  "user_agreement": "User Agreement",
+  "approve": "Approve",
   "navigation_not_found": "Page Not Found!"
 
 
