--- a/assets/lang/tr-TR.json
+++ b/assets/lang/tr-TR.json
@@ -41,6 +41,7 @@
   "category_choose_information": "Seni daha iyi tanıyabilmemiz ve sana özel önerilerde bulunabilmemiz için aşağıdan en az 4 en fazla 8 kategori seç",
   "save": "Kaydet",
   "clear_cache": "Önbelleği Temizle",
-
+  "user_agreement": "Kullanıcı Sözleşmesini",
+  "approve": "Okudum, Onaylıyorum",
   "navigation_not_found": "Aradığınız Sayfa Bulunamadı."
 }
