Added toast message for diamond on Homepage

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -42,7 +42,8 @@
   "clear_cache": "Clear Cache",
   "user_agreement": "User Agreement",
   "approve": "Approve",
-  "navigation_not_found": "Page Not Found!"
+  "navigation_not_found": "Page Not Found!",
+  "coming_soon": "Coming Soon"
 
 
 
