--- a/assets/lang/tr-TR.json
+++ b/assets/lang/tr-TR.json
@@ -43,5 +43,6 @@
   "clear_cache": "Önbelleği Temizle",
   "user_agreement": "Kullanıcı Sözleşmesini",
   "approve": "Okudum, Onaylıyorum",
-  "navigation_not_found": "Aradığınız Sayfa Bulunamadı."
+  "navigation_not_found": "Aradığınız Sayfa Bulunamadı.", 
+  "coming_soon": "Yakında Gelecek"
 }
